style.css
@font-face{
    font-family: 'Aspekta';
    src: url("./assets/Aspekta-450.ttf")
}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Aspekta";
}



body, html {
  width: 100%;
  height: 100%;
  background-image: url("./assets/dennis-schweizer-18nR85wWyLY-unsplash.jpg");
  background-size: cover; 
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
  scroll-behavior: smooth;

}

.home{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.about{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.gap{
    height: 220px;
    /* width: 150px; */
    background-color: transparent;
}

.nav{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    /* color: aliceblue;    */
    backdrop-filter: blur(2px);

    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.1);
    /* background-color: rosybrown; */
    
    padding: 20px;
    height: 70px;    
    width: 100%;
    position:fixed ;

    top: 0;
    z-index: 1000;
    
}

.nav-r{
    display: flex;
    flex-direction: row;
    margin-right: 250px;
    justify-content: space-between;


}
 .nav-r a{
    color:aliceblue;
    margin-right: 30px;
    text-decoration: none;

    font-size: 17px;
 }




.nav-l{
    justify-content: center;
    align-items: center;
    margin-left: 200px;
    display: flex;
    flex-direction: row;

}

.nav-l a{
    text-decoration: none;
    color: aliceblue;
    display: flex;
    
}

.hero{
    display: flex;
    flex-direction: column;
    height: 300px;
    justify-content: center;
    align-items: center;
    margin-bottom: 100px;
    
    
    /* background-color: beige; */
}
.hero h1{
    font-size: 42px;

    color: aliceblue;
}

.hcolor{
    color: #7060DC !important;

    font-size: 32px;
    font-weight: bold
}

.hero-h{
    display: flex;
    flex-direction: row;
    margin-bottom: 15px;
}

.hero h4{
    font-size: 18px;
    color: aliceblue;
    font-weight: lighter;
    text-align: center;
}

.hero button{
    color: aliceblue;
    background-color: #7060DC;
    margin-top: 25px;
    border-radius: 25px;
    padding: 10px 20px;
    border-style: hidden;
    font-size: 16px;

    
}

.hero button:hover{
    transform: scale(1.1);
    transition: transform 0.3s ease-in-out;
    cursor:pointer;
}

.mycolor{
    color: #7763f5 !important;
    font-family: "Aspekta";
    
    
}

.aboutme{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    width: 130px;
    align-items: center;
    /* margin-left: 46vw; */
    /* margin-top: 18vh; */
    /* margin-bottom: 60px; */
}

.aboutme h2{
    font-family: "Aspekta";
    color: aliceblue;
    font-size: 30px;
    
}

.about-section{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    height: 550px;
    width: 880px;
    /* background-color:aqua; */
    
    
}

.aboutsec{
    display: flex;
    flex-direction: row;
    width: 880px;
    justify-content: space-around;
}

.about-l{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    /* background-color: rgb(35, 34, 34); */
    height: 380px;
    /* width: 380px; */
}
.about-r{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    /* background-color: blue; */
    height: 380px;
    /* width: 380px; */
}

.aboutl1 p{
    color: aliceblue;
    text-align: center;
    margin-top: 20px;

    font-size: 14px;
}

.aboutl1 h2{
    color: aliceblue;
    text-align: center;
    margin-bottom: 40px;
    margin-top: 20px;
}

.about-rs{
    background-color: rgba(119, 99, 245, 0.5);
    backdrop-filter: blur(1px);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 110px;
    width: 450px;
    border-radius: 10px;
    border-color: #7763f5;
    border-style: solid;
    border-width: 2px;
    color: aliceblue;
    
}

.about-rs button{
    background-color: transparent;
    border-style: solid;
    border-color: aliceblue;
    border-width: 2px;
    border-radius: 10px;
    padding: 5px 10px;
    border-radius: 100px;
    align-items: center;
    /* font-size: 30px; */
}

.aboutl1{
    /* background-color: rgb(25, 23, 32); */
    height: 280px;
    width: 380px;
    
}

.aboutl2{
    display: flex;
    flex-direction: row;
    /* background-color: rgb(165, 173, 10); */
    height: 80px;
    width: 380px;
    justify-content:center;
    align-items: center;
    
}

.aboutl2 button{
    border-radius: 25px;
    padding: 10px 20px;
    margin:  10px;
    font-size: 16px;
    
}

.mybtn{
    background-color: #7763f5;
    color: aliceblue;
    border-style: none;
    
}

.CVbtn{
    color: #7763f5;
    background-color: transparent;
    border-color: #7763f5;
    border-style: double;
}

.mybtn:hover{
    transition: transform 0.3s ease-in-out;
    transform: scale(1.1);
    cursor: pointer;
}
.CVbtn:hover{
    transition: transform 0.3s ease-in-out;
    transform: scale(1.1);
    cursor: pointer;
}

#hehe{
    margin-left: 10px;
}

.about-section:hover{
    transform: scale(1.07);
    transition: transform 0.3s ease-in-out;
    backdrop-filter: blur(0.65px);
    border: 1px solid rgba(255, 255, 255, 0.327);
    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.1);
    border-radius: 10px;
    /* padding: 20px; */
}

.skill-icons img{
    height: 60px;
    width: 60px;
    margin: 0 20px 0 30px;

}


.skills{
    margin-right: 20px;
    display: flex;
    flex-direction: row;
    width: 280px;
    flex-wrap: wrap;
}

.techstack{
    border: solid 1px aliceblue;
    border-radius: 20px;
    padding: 5px 10px;
    margin: 5px;
    background-color: rgba(88, 72, 189, 0.818);
}

.techstack:hover{
    transform: scale(1.065);
    transition: transform 0.3s ease-in-out;
    cursor: pointer;
    background-color: rgba(86, 31, 198, 0.664);
    border-color: aliceblue;
}

.project-section{
    height: 770px;
    width: 85%;
    /* background-color: burlywood; */
    display: flex;
    flex-direction: column;
    /* align-items: center; */
    padding: 20px;
    margin-top: -100px;
}

.projhead{
    /* background-color:aquamarine; */
    color: aliceblue;
    font-size: 22px;
    margin: 10px 0 10px 20px;
    height: 100px;
    width: 280px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-evenly;
    
}

.projsec{
    margin-top: 40px;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    /* background-color: cadetblue; */
    height: 550px;
    width: 100%;
}

.proj-cards{
    background-color: chocolate;
    background-color:rgba(11, 17, 27, 0.5);
    color: aliceblue;
    height: 570px;
    width: 460px;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    border-radius: 10px;
    align-items: center;
    margin-left: 30px;
    /* border: solid 0.5px aliceblue; */
    
}

.proj-cards .projimg{
    object-fit: contain;
    border-radius: 10px;
    width: 100%;
    height: 260px;
    border: solid 0.5px aliceblue;
    box-shadow: aliceblue 0px 0px 8px 2px;
    /* height: 100%; */

}

.proj-cards:hover{
    transform: scale(1.05);
    transition: transform 0.3s ease-in-out;
    /* cursor: pointer; */
    border-color: aliceblue;
    border-style: solid;
    border-width: 1px;
    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(0.65px);
    /* padding: 10px; */
}
.proj-cards .projimg:hover{
    transform: scale(1.1);
    transition: transform 0.3s ease-in-out;
    cursor: pointer;
    border-radius: 10px;
    border-color: aliceblue;
    border-style: solid;
    border-width: 2px;
    background-color: #050811;
}

.proj-links{
    display: flex;
    flex-direction: row;
    width: 370px;
    justify-content: space-evenly;

}

.proj-links button{
    margin: 0 10px 0 10px;
    font-size: larger;
    padding: 10px 15px;
    border-radius: 10px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-evenly;
    /* text-decoration: none; */
}

.proj-links button:hover{
    transform: scale(1.1);
    transition: transform 0.3s ease-in-out;
    cursor: pointer;

}

.sitebtn{
    background-color: #7763f5;
    color: aliceblue;
    border: none;
    
}

.codebtn{
    background-color:#050811;
    color: aliceblue;
    border: solid 1px aliceblue;

}

.proj-links a{
    text-decoration: none;
    color: aliceblue;
}

.proj-links img{
    height: 35px;
    width: 35px;
    margin-right: 10px;
}

.proj-desc{
    margin: 0 20px 20px  20px;
    height: 120px;
    text-align: center;
}

.proj-desc p{
    text-align:left !important;
    font-size: 17px;
    line-height: 1.5;
    color: aliceblue;

    margin-top: 10px;

}

